--- a/docs/oss/guides/performance-alerts.mdx
+++ b/docs/oss/guides/performance-alerts.mdx
@@ -1,8 +1,9 @@
 ---
-title: Performance Alerts
-sidebarTitle: Performance alerts
+title: "Performance Alerts"
+sidebarTitle: "Performance alerts"
 ---
 
 import PerformanceAlerts from '/snippets/guides/performance-alerts.mdx';
 
 <PerformanceAlerts />
+
