--- a/docs/snippets/cloud/integrations/bigquery.mdx
+++ b/docs/snippets/cloud/integrations/bigquery.mdx
@@ -2,7 +2,7 @@ import CloudServiceAccount from '/snippets/dwh/bigquery/cloud_service_account.md
 import PermissionsAndSecurity from '/snippets/cloud/integrations/permissions-and-security.mdx';
 import IpAllowlist from '/snippets/cloud/integrations/ip-allowlist.mdx';
 
-You will connect Elementary Cloud to Bigquery for syncing the Elementary schema (created by the [Elementary dbt package](/cloud/onboarding/quickstart-dbt-package)).
+This guide contains the necessary steps to connect a BigQuery environment to your Elementary account.
 
 <CloudServiceAccount />
 
