--- a/docs/snippets/cloud/integrations/clickhouse.mdx
+++ b/docs/snippets/cloud/integrations/clickhouse.mdx
@@ -1,6 +1,8 @@
 import CreateUserOperation from '/snippets/cloud/integrations/create-user-operation.mdx';
 import IpAllowlist from '/snippets/cloud/integrations/ip-allowlist.mdx';
 
+This guide contains the necessary steps to connect an Clickhouse environment to your Elementary account.
+
 You will connect Elementary Cloud to Clickhouse for syncing the Elementary schema (created by the [Elementary dbt package](/cloud/onboarding/quickstart-dbt-package)).
 
 <CreateUserOperation />
