--- a/docs/snippets/cloud/integrations/databricks.mdx
+++ b/docs/snippets/cloud/integrations/databricks.mdx
@@ -2,7 +2,7 @@ import CreateServicePrincipal from '/snippets/dwh/databricks/create_service_prin
 import PermissionsAndSecurity from '/snippets/dwh/databricks/databricks_permissions_and_security.mdx';
 import IpAllowlist from '/snippets/cloud/integrations/ip-allowlist.mdx';
 
-You will connect Elementary Cloud to Databricks for syncing the Elementary schema (created by the [Elementary dbt package](/cloud/onboarding/quickstart-dbt-package)).
+This guide contains the necessary steps to connect a Databricks environment to your Elementary account.
 
 <CreateServicePrincipal />
 
