--- a/docs/snippets/cloud/integrations/snowflake.mdx
+++ b/docs/snippets/cloud/integrations/snowflake.mdx
@@ -1,6 +1,6 @@
 import CreateUserOperationSnowflake from '/snippets/cloud/integrations/create-user-operation-snowflake.mdx';
 
-You will connect Elementary Cloud to Snowflake for syncing the Elementary schema (created by the [Elementary dbt package](/cloud/onboarding/quickstart-dbt-package)).
+This guide contains the necessary steps to connect a Snowflake environment to your Elementary account.
 
 <CreateUserOperationSnowflake />
 
