--- a/docs/snippets/cloud/integrations/athena.mdx
+++ b/docs/snippets/cloud/integrations/athena.mdx
@@ -1,6 +1,6 @@
 import CreateUserOperation from '/snippets/cloud/integrations/create-user-operation.mdx';
 
-You will connect Elementary Cloud to Athena for syncing the Elementary schema (created by the [Elementary dbt package](/cloud/onboarding/quickstart-dbt-package)).
+This guide contains the necessary steps to connect an Athena environment to your Elementary account.
 
 <CreateUserOperation />
 
