--- a/docs/snippets/cloud/integrations/dremio.mdx
+++ b/docs/snippets/cloud/integrations/dremio.mdx
@@ -1,3 +1,5 @@
+This guide contains the necessary steps to connect a Dremio environment to your Elementary account.
+
 **Note:** We currently support **Dremio Cloud only**. If you are using Dremio Software, please contact us for assistance.
 
 ### Create a user for Elementary cloud
