--- a/docs/snippets/cloud/integrations/redshift.mdx
+++ b/docs/snippets/cloud/integrations/redshift.mdx
@@ -1,7 +1,7 @@
 import CreateUserOperation from '/snippets/cloud/integrations/create-user-operation.mdx';
 import IpAllowlist from '/snippets/cloud/integrations/ip-allowlist.mdx';
 
-You will connect Elementary Cloud to Redshift for syncing the Elementary schema (created by the [Elementary dbt package](/cloud/onboarding/quickstart-dbt-package)).
+This guide contains the necessary steps to connect a Redshift environment to your Elementary account.
 
 <CreateUserOperation />
 
