added account token generation documentation under atlan

--- a/docs/cloud/integrations/governance/atlan.mdx
+++ b/docs/cloud/integrations/governance/atlan.mdx
@@ -18,7 +18,6 @@ data.
   </div>
 </Frame>
 
-## Required Authentication details for the Atlan integration
 ### Atlan API Key
 To generate an API key, follow these steps:
 1. Create a new Persona in Atlan, with the following permissions:
@@ -28,4 +27,10 @@ To generate an API key, follow these steps:
 ### Atlan Base Url
 Your Atlan base URL, for example `https://my-company.atlan.com`
 
+### Elementary Account Token (required for connecting through the Atlan app)
+You can generate tokens directly from the Elementary UI: go to [Account → Account Tokens](https://app.elementary-data.com/settings/account-tokens).
 
+Quick steps:
+1. Open the **Account → Account Tokens** page and click **Generate token**.
+2. (Optional) Add a name/description.
+3. Copy the token and store it securely — it is shown once. Manage (revoke/rotate) anytime from the same page.
