Update logo and button colors
- Update light mode logo to new 2025 full color logo
- Update dark mode logo to new 2025 white logo with pink mark
- Change primary button color to #FF20B8

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -969,12 +969,12 @@ export const HomeFooter = () => (
             <span className="sr-only">Elementary home page</span>
             <img
               className="w-auto relative object-contain block dark:hidden max-w-48 h-[26px]"
-              src="/logo/light.svg"
+              src="https://res.cloudinary.com/do5hrgokq/image/upload/v1764079214/Elementary_2025_Full_Color_Logo_mtdixp.png"
               alt="light logo"
             />
             <img
               className="w-auto relative object-contain hidden dark:block max-w-48 h-[26px]"
-              src="/logo/dark.svg"
+              src="https://res.cloudinary.com/do5hrgokq/image/upload/v1764079353/Elementary_2025_White_Logo_Pink_Mark_l85bke.png"
               alt="dark logo"
             />
           </a>
