Fix remaining orange colors to pink
- Change hero link underline color to pink in light mode
- Update docs.json light color from orange to pink
- Update cloud feature tag colors to pink
- Add comprehensive CSS overrides for orange colors in dark mode

--- a/docs/snippets/cloud/cloud-feature-tag.mdx
+++ b/docs/snippets/cloud/cloud-feature-tag.mdx
@@ -1,8 +1,8 @@
 {/* prettier-ignore */}
   <span
     style={{
-      background: "rgba(254,147,86,0.1)",
-      color: "#FE9356",
+      background: "rgba(255,32,184,0.1)",
+      color: "#FF20B8",
       borderRadius: "10px",
       fontSize: ".6em",
       padding: "2px 10px",
@@ -10,7 +10,7 @@
       fontWeight: "700",
       letterSpacing: ".5px",
       whiteSpace: "nowrap",
-      borderColor: "#FE9356",
+      borderColor: "#FF20B8",
       borderWidth: "1px"
     }}
   >ELEMENTARY CLOUD</span>
