Update Join the community section and cloud icons to new pink
- Change pink theme background to #FF20B8
- Update cloud feature icon fill color to #FF20B8

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -812,7 +812,7 @@ export const FeatureCard = ({
                 <g>
                   <path
                     d="M14.5125 4.53C14.2606 3.25329 13.5732 2.10364 12.5678 1.27743C11.5624 0.451225 10.3013 -0.000294182 9 1.43803e-07C6.8325 1.43803e-07 4.95 1.23 4.0125 3.03C2.91018 3.14912 1.89075 3.67141 1.15012 4.49649C0.409478 5.32158 -0.000128776 6.39126 3.03696e-08 7.5C3.03696e-08 9.9825 2.0175 12 4.5 12H14.25C16.32 12 18 10.32 18 8.25C18 6.27 16.4625 4.665 14.5125 4.53Z"
-                    fill="#F2386C"
+                    fill="#FF20B8"
                   />
                   <g>
                     <path
