Add download link and cross-reference to Set up Elementary guide

--- a/docs/cloud/guides/start-using-elementary.mdx
+++ b/docs/cloud/guides/start-using-elementary.mdx
@@ -3,7 +3,11 @@ title: "Start Using Elementary"
 sidebarTitle: "Start Using Elementary"
 ---
 
-With your environment connected, the next step is to see Elementary in action.
+<Info>
+Here's a link to a checkbox version of this guide that you can download and use to track your progress: [Download as markdown](/cloud/guides/start-using-elementary.md).
+</Info>
+
+With your environment connected (see [Set up Elementary](/cloud/guides/set-up-elementary) for technical onboarding), the next step is to see Elementary in action.
 
 We'll take a few of your key assets and run them through the core reliability steps: setting clear ownership, adding the right tests, configuring alerts, and understanding how issues are detected and resolved. This gives you a practical, hands-on view of how Elementary keeps your most important data reliable.
 
