Add download link and cross-reference to Start Using Elementary guide

--- a/docs/cloud/guides/set-up-elementary.mdx
+++ b/docs/cloud/guides/set-up-elementary.mdx
@@ -3,9 +3,13 @@ title: "Set up Elementary"
 sidebarTitle: "Set up Elementary"
 ---
 
+<Info>
+Here's a link to a checkbox version of this guide that you can download and use to track your progress: [Download as markdown](/cloud/guides/set-up-elementary.md).
+</Info>
+
 Building reliable, trustworthy data pipelines shouldn't be painful. Elementary gives you a clear, fast path to understanding your data, monitoring its health, and responding before problems impact your business.
 
-This guide walks you through everything you need to onboard successfully, from connecting your stack to configuration and setting up your first workflows.
+This guide walks you through everything you need to onboard successfully, from connecting your stack to configuration and setting up your first workflows. Once you've completed the technical setup, continue with [Start Using Elementary](/cloud/guides/start-using-elementary) to begin using Elementary in practice.
 
 With Elementary, you'll quickly be able to:
 
