--- a/docs/cloud/guides/start-using-elementary.mdx
+++ b/docs/cloud/guides/start-using-elementary.mdx
@@ -3,9 +3,9 @@ title: "Start Using Elementary"
 sidebarTitle: "Start using"
 ---
 
-<Info>
+<Check>
 Here's a link to a checkbox version of this guide that you can download and use to track your progress: [Download as markdown](/cloud/guides/start-using-elementary.md).
-</Info>
+</Check>
 
 With your environment connected (see [Set up Elementary](/cloud/guides/set-up-elementary) for technical onboarding), the next step is to see Elementary in action.
 
