--- a/docs/cloud/guides/set-up-elementary.mdx
+++ b/docs/cloud/guides/set-up-elementary.mdx
@@ -30,51 +30,51 @@ Let's get you set up.
 
 ### Setup and integrations
 
-[ ] [Create Elementary cloud account](/cloud/quickstart) (quick-start guide)  
-[ ] [Install Elementary dbt package](/cloud/onboarding/quickstart-dbt-package)   
+- [ ] [Create Elementary cloud account](/cloud/quickstart) (quick-start guide)  
+- [ ] [Install Elementary dbt package](/cloud/onboarding/quickstart-dbt-package)   
       Collect dbt artifacts and enable Elementary's built-in tests (anomaly detection, schema change detection). If you already have the package deployed in the relevant environment you want to monitor, make sure it's up to date to the latest version, and upgrade it if not.  
-[ ] [Connect your data warehouse](/cloud/onboarding/connect-data-warehouse)   
+- [ ] [Connect your data warehouse](/cloud/onboarding/connect-data-warehouse)   
       Elementary reads metadata (dbt artifacts, information schema, query history) to power test results, run history, automated freshness/volume monitors, and column-level lineage.  
-[ ] [Invite team members](/cloud/manage-team)  
-[ ] [Code repository connection (optional)](/cloud/integrations/code-repo/connect-code-repo)   
+- [ ] [Invite team members](/cloud/manage-team)  
+- [ ] [Code repository connection (optional)](/cloud/integrations/code-repo/connect-code-repo)   
       Allow users and AI agents to open PRs and manage changes through your CI/CD process.  
-[ ] [Integrate with your BI tool (optional)](/cloud/integrations/bi/connect-bi-tool)   
+- [ ] [Integrate with your BI tool (optional)](/cloud/integrations/bi/connect-bi-tool)   
       Enable column-level lineage and full context for BI assets, including the health of upstream sources and models.  
-[ ] Connect to your external Catalog (Optional)  
+- [ ] Connect to your external Catalog (Optional)  
       Present Elementary data health context in another catalog, we support [Atlan](/cloud/integrations/governance/atlan).   
-[ ] Non-dbt tables (optional)  
+- [ ] Non-dbt tables (optional)  
       Elementary has a Python SDK for python-based transformations. If you need Elementary to monitor non-dbt tables, reach out to the Elementary team with a list of relevant schemas / datasets / databases. This is a beta feature, the team will guide you through the next steps.
 
 ### Alerts & Incidents
 
-[ ] Connect messaging app ([Slack](/cloud/integrations/alerts/slack) / [MS Teams](/cloud/integrations/alerts/ms-teams))  
+- [ ] Connect messaging app ([Slack](/cloud/integrations/alerts/slack) / [MS Teams](/cloud/integrations/alerts/ms-teams))  
       Receive alerts where your team already works.  
-[ ] Connect [incident management tool](/cloud/integrations/alerts) (optional)  
+- [ ] Connect [incident management tool](/cloud/integrations/alerts) (optional)  
       We support [Opsgenie](/cloud/integrations/alerts/opsgenie) and [PagerDuty](/cloud/integrations/alerts/pagerduty).  
-[ ] Connect [ticketing system](/cloud/integrations/alerts) (optional)  
+- [ ] Connect [ticketing system](/cloud/integrations/alerts) (optional)  
       We support [Jira](/cloud/integrations/alerts/jira), [ServiceNow](/cloud/integrations/alerts/servicenow) and [Linear](/cloud/integrations/alerts/linear).
 
 ### AI Agents
 
-[ ] Sign [AI features consent form](https://2cwlc1.share-eu1.hsforms.com/2toUDbhpMRTK0WPmv2az_2g)   
+- [ ] Sign [AI features consent form](https://2cwlc1.share-eu1.hsforms.com/2toUDbhpMRTK0WPmv2az_2g)   
       Elementary AI uses only metadata, not raw or personal data. LLMs run via Amazon Bedrock with no data sharing to third parties. Learn more [here](/cloud/general/ai-privacy-policy).  
-[ ] Elementary to open AI Features
+- [ ] Elementary to open AI Features
 
 ## Advanced Setup
 
-[ ] [Schedule Elementary syncs](/cloud/guides/sync-scheduling) with your data warehouse.  
-[ ] Contact the Elementary team to enable [Okta SSO](/cloud/integrations/security-and-connectivity/okta), [AWS PrivateLink](/cloud/integrations/security-and-connectivity/aws-privatelink-integration), or [Microsoft Entra ID](/cloud/integrations/security-and-connectivity/ms-entra).  
-[ ] [Configuring Elementary for Development and Production](/cloud/guides/dev-prod-configuration)  
-[ ]  [Manage multiple environments](/cloud/features/multi-env)  
+- [ ] [Schedule Elementary syncs](/cloud/guides/sync-scheduling) with your data warehouse.  
+- [ ] Contact the Elementary team to enable [Okta SSO](/cloud/integrations/security-and-connectivity/okta), [AWS PrivateLink](/cloud/integrations/security-and-connectivity/aws-privatelink-integration), or [Microsoft Entra ID](/cloud/integrations/security-and-connectivity/ms-entra).  
+- [ ] [Configuring Elementary for Development and Production](/cloud/guides/dev-prod-configuration)  
+- [ ]  [Manage multiple environments](/cloud/features/multi-env)  
       Use multiple dbt projects and targets (dev, staging, prod) through the multi-env feature.  
       If you wish to monitor multiple environments in a single environment view (including unified lineage), reach out to the Elementary team.  
-[ ] [Collect job information from orchestrator](/cloud/guides/collect-job-data)  
+- [ ] [Collect job information from orchestrator](/cloud/guides/collect-job-data)  
       Elementary can collect metadata about your jobs from the orchestrator you are using, and enrich the Elementary UI with this information.
 
 ## Security and permissions
 
-[ ] Configure [roles and permissions](/cloud/manage-team) in Elementary (optional).  
-[ ] Add SSO authentication with [Okta](/cloud/integrations/security-and-connectivity/okta) or [Azure AD](/cloud/integrations/security-and-connectivity/ms-entra) (optional).  
-[ ] Connect using [AWS private link](/cloud/integrations/security-and-connectivity/aws-privatelink-integration) (optional)   
-[ ] Export [user activity logs](/cloud/features/collaboration-and-communication/user-activity-logs) (optional).
+- [ ] Configure [roles and permissions](/cloud/manage-team) in Elementary (optional).  
+- [ ] Add SSO authentication with [Okta](/cloud/integrations/security-and-connectivity/okta) or [Azure AD](/cloud/integrations/security-and-connectivity/ms-entra) (optional).  
+- [ ] Connect using [AWS private link](/cloud/integrations/security-and-connectivity/aws-privatelink-integration) (optional)   
+- [ ] Export [user activity logs](/cloud/features/collaboration-and-communication/user-activity-logs) (optional).
 
