--- a/docs/cloud/guides/set-up-elementary.mdx
+++ b/docs/cloud/guides/set-up-elementary.mdx
@@ -3,10 +3,6 @@ title: "Set up Elementary"
 sidebarTitle: "Set up Elementary"
 ---
 
-<Info>
-Here's a link to a checkbox version of this guide that you can download and use to track your progress: [Download as markdown](/cloud/guides/set-up-elementary.md).
-</Info>
-
 Building reliable, trustworthy data pipelines shouldn't be painful. Elementary gives you a clear, fast path to understanding your data, monitoring its health, and responding before problems impact your business.
 
 This guide walks you through everything you need to onboard successfully, from connecting your stack to configuration and setting up your first workflows. Once you've completed the technical setup, continue with [Start Using Elementary](/cloud/guides/start-using-elementary) to begin using Elementary in practice.
@@ -27,6 +23,10 @@ Let's get you set up.
 * **Enabling all users** - Elementary is built for the entire organization. Business users get a clear catalog, ownership information, health scores, and AI assistance so everyone can find, understand, and trust the data without depending on engineering.
 
 ## Technical Setup
+
+<Check>
+Here's a link to a checkbox version of this guide that you can download and use to track your progress: [Download as markdown](/cloud/guides/set-up-elementary.md).
+</Check>
 
 ### Setup and integrations
 
