Update quickstart page: add welcome message, dbt requirement note, external catalogs integration, and product tour link

--- a/docs/snippets/cloud/quickstart-steps.mdx
+++ b/docs/snippets/cloud/quickstart-steps.mdx
@@ -10,7 +10,7 @@
     Note: Elementary can't access your data. It only requires access to logs, test results, and metadata.
   </Step>
   <Step title="Connect your stack">
-Connect your [code repository](/cloud/integrations/code-repo/connect-code-repo), [messaging tools](/cloud/guides/enable-slack-alerts), and [BI platforms](/cloud/integrations/bi/connect-bi-tool) to get full visibility and collaboration across your data workflows.
+Connect your [code repository](/cloud/integrations/code-repo/connect-code-repo), [messaging tools](/cloud/guides/enable-slack-alerts), [BI platforms](/cloud/integrations/bi/connect-bi-tool), and [external catalogs](/cloud/integrations/governance/atlan) to get full visibility and collaboration across your data workflows.
 See all available integrations [here](cloud/features/integrations).
   </Step>
   <Step title="Invite your team!" icon="party-horn">
