--- a/docs/cloud/quickstart.mdx
+++ b/docs/cloud/quickstart.mdx
@@ -6,11 +6,22 @@ icon: "circle-play"
 
 import QuickstartSteps from '/snippets/cloud/quickstart-steps.mdx';
 
+Welcome to Elementary! Very soon you'll be able to gain source-to-BI observability into your pipeline and:
+
+- Detect issues before they impact downstream assets.
+- Guarantee trusted inputs for dashboards, models, and AI workflows.
+- Set and enforce compliance and governance policies.
+- Make data easy to find, increase adoption, and build trust.
+- Use AI agents to automate coverage, triage, documentation, and governance.
 
 There are two ways to get started, depending on what works best for your team:
 
 - **Start a 30-day free trial** and set everything up yourself — perfect for smaller teams or hands-on users.
 - **For larger teams or more tailored needs, [book a demo](https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs?uuid=17a4a61f-d0d3-4cbc-9362-56e37483f6f5)** and our team will help you get started.
+
+:::note
+To use Elementary, you must be a dbt user. We will soon release a Python SDK for any Python pipeline and test.
+:::
 
 ### Self-Serve Setup (Free Trial)
 
@@ -19,7 +30,7 @@ There are two ways to get started, depending on what works best for your team:
 ### Get the most out of Elementary
 To explore everything the platform has to offer:
 - Browse the [Elementary Cloud feature overview](/cloud/features)
-- Watch our [demo videos](https://www.elementary-data.com/elementary-cloud-demo-videos) for a guided walkthrough of key capabilities
+- [Take our product tour](https://www.elementary-data.com/product-tour-signup) for a guided walkthrough of key capabilities
 
 ### Need help with onboarding?
 
