--- a/docs/cloud/quickstart.mdx
+++ b/docs/cloud/quickstart.mdx
@@ -6,22 +6,16 @@ icon: "circle-play"
 
 import QuickstartSteps from '/snippets/cloud/quickstart-steps.mdx';
 
-Welcome to Elementary! Very soon you'll be able to gain source-to-BI observability into your pipeline and:
+Welcome to Elementary!
 
-- Detect issues before they impact downstream assets.
-- Guarantee trusted inputs for dashboards, models, and AI workflows.
-- Set and enforce compliance and governance policies.
-- Make data easy to find, increase adoption, and build trust.
-- Use AI agents to automate coverage, triage, documentation, and governance.
+You’re moments away from full source-to-BI observability—so you can detect issues before they spread, guarantee trusted inputs for dashboards, models, and AI workflows, enforce governance policies, make data easy to find, and let AI agents automate coverage, triage, optimization and governance.
 
 There are two ways to get started, depending on what works best for your team:
 
 - **Start a 30-day free trial** and set everything up yourself — perfect for smaller teams or hands-on users.
-- **For larger teams or more tailored needs, [book a demo](https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs?uuid=17a4a61f-d0d3-4cbc-9362-56e37483f6f5)** and our team will help you get started.
+- **For larger teams or more tailored needs, [reach out to the team](https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs?uuid=17a4a61f-d0d3-4cbc-9362-56e37483f6f5)** and we'll be happy to help you get started.
 
-:::note
-To use Elementary, you must be a dbt user. We will soon release a Python SDK for any Python pipeline and test.
-:::
+<Callout icon="dbt" color="#FFC107" iconType="regular">To use Elementary, you must be a dbt user. We will soon release a Python SDK for any Python pipeline and test.</Callout>
 
 ### Self-Serve Setup (Free Trial)
 
@@ -29,8 +23,9 @@ To use Elementary, you must be a dbt user. We will soon release a Python SDK for
 
 ### Get the most out of Elementary
 To explore everything the platform has to offer:
-- Browse the [Elementary Cloud feature overview](/cloud/features)
 - [Take our product tour](https://www.elementary-data.com/product-tour-signup) for a guided walkthrough of key capabilities
+- Browse the [Elementary Cloud feature overview](/cloud/features)
+
 
 ### Need help with onboarding?
 
