--- a/docs/cloud/quickstart.mdx
+++ b/docs/cloud/quickstart.mdx
@@ -8,14 +8,16 @@ import QuickstartSteps from '/snippets/cloud/quickstart-steps.mdx';
 
 Welcome to Elementary!
 
-You’re moments away from full source-to-BI observability—so you can detect issues before they spread, guarantee trusted inputs for dashboards, models, and AI workflows, enforce governance policies, make data easy to find, and let AI agents automate coverage, triage, optimization and governance.
+You’re moments away from full source-to-BI observability that helps you catch issues early and keep dashboards, models, and AI workflows running on trusted data.
+You’ll be able to enforce governance with confidence and make data easier for teams to find and rely on.
+And with AI agents automating coverage, triage, documentation, and governance, you can stay focused on the work that truly drives impact.
 
 There are two ways to get started, depending on what works best for your team:
 
 - **Start a 30-day free trial** and set everything up yourself — perfect for smaller teams or hands-on users.
 - **For larger teams or more tailored needs, [reach out to the team](https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs?uuid=17a4a61f-d0d3-4cbc-9362-56e37483f6f5)** and we'll be happy to help you get started.
 
-<Callout icon="dbt" color="#FFC107" iconType="regular">To use Elementary, you must be a dbt user. We will soon release a Python SDK for any Python pipeline and test.</Callout>
+<Callout icon="merge" color="#FFC107" iconType="regular">To use Elementary, you must be a dbt user. We will soon release a Python SDK for any Python pipeline and test.</Callout>
 
 ### Self-Serve Setup (Free Trial)
 
