--- a/docs/cloud/quickstart.mdx
+++ b/docs/cloud/quickstart.mdx
@@ -8,9 +8,8 @@ import QuickstartSteps from '/snippets/cloud/quickstart-steps.mdx';
 
 Welcome to Elementary!
 
-You’re moments away from full source-to-BI observability that helps you catch issues early and keep dashboards, models, and AI workflows running on trusted data.
-You’ll be able to enforce governance with confidence and make data easier for teams to find and rely on.
-And with AI agents automating coverage, triage, documentation, and governance, you can stay focused on the work that truly drives impact.
+You’re moments away from source-to-BI observability that helps you spot issues early, trust your data, and enforce governance effortlessly.
+AI agents will automate coverage, triage, and documentation so you can focus on higher-impact work.
 
 There are two ways to get started, depending on what works best for your team:
 
