Update onboarding: rename sidebar to 'Onboarding guides', remove signup page, renumber icons, and clean up quickstart steps

--- a/docs/snippets/cloud/quickstart-steps.mdx
+++ b/docs/snippets/cloud/quickstart-steps.mdx
@@ -1,6 +1,6 @@
 <Steps>
   <Step title="Create an account">
-    [Sign up to Elementary](https://elementary-data.frontegg.com/oauth/account/sign-up) using Google SSO or email. See [important information about allowing Elementary to override dbt's default test materializations](/cloud/onboarding/quickstart-dbt-package#important-allowing-elementary-to-override-dbts-default-test-materializations-relevant-from-dbt-1-8) (relevant from dbt 1.8).
+    [Sign up to Elementary](https://elementary-data.frontegg.com/oauth/account/sign-up) using Google SSO or email.
   </Step>
   <Step title="Install Elementary dbt package">
     To start using Elementary, you need to [add our dbt package to your dbt project](/cloud/onboarding/quickstart-dbt-package).
