--- a/docs/data-tests/dbt/dbt-artifacts.mdx
+++ b/docs/data-tests/dbt/dbt-artifacts.mdx
@@ -35,50 +35,10 @@ Elementary loads data from dbt artifacts to models that can be found under `dbt_
 
 For `dbt_run_results` data is inserted at the on-run-end, and for the rest of the models it's a post-hook on the model itself.
 
-The dbt artifacts models are:
+The dbt artifacts models include:
 
-### dbt_run_results
+- **Metadata tables** - `dbt_models`, `dbt_tests`, `dbt_sources`, `dbt_exposures`, `dbt_metrics`, `dbt_snapshots`, `dbt_seeds`, `dbt_columns`, `dbt_groups` - These provide a comprehensive view of your dbt project structure and configurations. Each time these models are executed, the data is replaced with data from the project's current graph.
 
-Run results of models and tests, inserted at the end of each invocation. Each row is the invocation result of a single resource (model, test, etc.), and includes information like execution time start and end, status and affected rows.
-This is an incremental model, new run results are added with each invocation that produces a result object.
+- **Run results tables** - `dbt_run_results`, `dbt_invocations`, `elementary_test_results`, `model_run_results`, `snapshot_run_results`, `seed_run_results`, `job_run_results`, `dbt_source_freshness_results` - These track execution details, test outcomes, and performance metrics from your dbt runs.
 
-### dbt_models
-
-Data about all the models in the project and project packages. Each row contains information about the properties of a single model, including columns like tags, owner, materialization, depends_on, and description.
-Each time the model is executed, the data is replaced with data from the project's current graph.
-
-### dbt_tests
-
-Data about all the tests in the project and project packages. Each row contains information about the properties of a single test, including columns like severity, parent model unique id, tags and owner of the parent model, test params, and the test compiled query.
-Each time the model is executed, the data is replaced with data from the project's current graph.
-
-### dbt_sources
-
-Data about the sources configured in the project and project packages. Each row contains information about the properties of a single source, including columns like tags, owner, freshness configuration, database and schema.
-Each time the model is executed, the data is replaced with data from the project's current graph.
-
-### dbt_exposures
-
-Data about the exposures configured in the project and project packages. Each row contains information about the properties of a single exposure, including columns like tags, owner, url and depends on.
-Each time the model is executed, the data is replaced with data from the project's current graph.
-
-### dbt_metrics
-
-Data about the metrics configured in the project and project packages. Each row contains information about the properties of a single metric, including columns like tags, owner, sql, and depends on.
-Each time the model is executed, the data is replaced with data from the project's current graph.
-
-### dbt_snapshots
-
-Data about all the snapshots in the project and project packages.
-Each row contains information about the properties of a single snapshot, including columns like tags, owner, depends_on, and description.
-Each time the model is executed, the data is replaced with data from the project's current graph.
-
-### dbt_columns
-
-Data about all the columns that are documented in the yml files. Each row contains information about the properties of a single column, including data type and description.
-Each time the model is executed, the data is replaced with data from the project's current graph.
-
-### dbt_groups
-
-Data about the groups configured in the project and project packages. Each row contains information about the properties of a single group, including columns like group name and owner.
-Each time the model is executed, the data is replaced with data from the project's current graph.
+For detailed schema documentation including all columns and their descriptions, see the [package models documentation](/data-tests/dbt/package-models).
