Update docs homepage title and favicon
- Change main title to 'The Data & AI Control plane'
- Update favicon to new image

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -11,9 +11,8 @@ icon: "house"
         <div className="home__hero-content">
           <div className="home__hero-text-block">
             <h1 className="home__hero-title">
-              Dev-First <br />
-              AI-Powered <br />
-              Data Observability
+              The Data & AI <br />
+              Control Plane
             </h1>
             <p className="home__hero-subtitle">
               Elementary is built for and trusted by <br />
