Shorten hero subtitle text

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -15,8 +15,8 @@ icon: "house"
               Control Plane
             </h1>
             <p className="home__hero-subtitle">
-              Observability, quality, governance and discovery in a single platform. <br />
-              Elementary is built for and trusted by 1000+ engineering and analytics teams.
+              Elementary is built for and trusted by <br />
+              1000+ engineering and analytics teams.
             </p>
             <a href="/cloud/what-is-elementary" className="home__hero-link">
               What is Elementary?
