Remove Beta and Coming soon labels from AI agent pages

--- a/docs/cloud/ai-agents/catalog-agent.mdx
+++ b/docs/cloud/ai-agents/catalog-agent.mdx
@@ -6,9 +6,7 @@ icon: "book-open"
 <Card title="Learn more about Ella's full set of AI agents" icon="sparkles" href="/cloud/ai-agents/overview" horizontal="true">
 </Card>
 
-_Coming soon_
-
-**The Catalog Agent helps data analysts, business users, and AI tools find the right data on their own so engineers don’t have to be the bottleneck.** By interpreting natural language questions and surfacing the right context—including data health, lineage, and metric definitions—it enables faster, more confident access to the data people need. The Catalog Agent lays the groundwork for more accurate and effective AI-powered workflows across your organization.
+**The Catalog Agent helps data analysts, business users, and AI tools find the right data on their own so engineers don't have to be the bottleneck.** By interpreting natural language questions and surfacing the right context—including data health, lineage, and metric definitions—it enables faster, more confident access to the data people need. The Catalog Agent lays the groundwork for more accurate and effective AI-powered workflows across your organization.
 
 ### Using the Catalog Agent
 
@@ -38,7 +36,7 @@ The agent will interpret your request using metadata, lineage, and semantic cont
 
 ### Intelligent Discovery
 
-Helps users find the right data using metadata (tags, descriptions, owners, lineage to understand dependencies and impact and semantic layers *(coming soon)* from dbt, BI tools, or external catalogs for metric-level context
+Helps users find the right data using metadata (tags, descriptions, owners, lineage to understand dependencies and impact and semantic layers from dbt, BI tools, or external catalogs for metric-level context
 
 ### Trust and Quality Signals
 
