--- a/docs/cloud/ai-agents/governance-agent.mdx
+++ b/docs/cloud/ai-agents/governance-agent.mdx
@@ -7,9 +7,7 @@ icon: "tags"
 <Card title="Learn more about Ella's full set of AI agents" icon="sparkles" href="/cloud/ai-agents/overview" horizontal="true">
 </Card>
 
-_Coming soon_
-
-**Governing your data isn’t just about internal organization, it’s the key to making your data reliably usable by both humans and AI.** 
+**Governing your data isn't just about internal organization, it's the key to making your data reliably usable by both humans and AI.** 
 
 The Governance Agent helps you scale and maintain trusted, well-documented data assets without manual effort. It evaluates your metadata, identifies gaps, and suggests improvements, all based on how your organization already tags, documents, and assigns ownership. 
 
