--- a/docs/cloud/ai-agents/test-recommendation-agent.mdx
+++ b/docs/cloud/ai-agents/test-recommendation-agent.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Test Recommendation AI Agent (Beta)"
+title: "Test Recommendation AI Agent"
 sidebarTitle: "Test recommendation agent"
 icon: "vial-circle-check"
 ---
@@ -38,7 +38,7 @@ Open the agent from the test configuration screen and ask a question like **"Wha
 
 ### Coverage Analysis and Test Recommendations
 
-The agent analyzes assets individually and in context, taking into account lineage, metadata, SQL logic, and usage, to identify where coverage is missing or misaligned. It suggests new tests based on best practices and your team’s existing style, and (coming soon) your own test policy configuration.
+The agent analyzes assets individually and in context, taking into account lineage, metadata, SQL logic, and usage, to identify where coverage is missing or misaligned. It suggests new tests based on best practices and your team's existing style, and your own test policy configuration.
 
 ### Fatigue Reduction
 
