--- a/docs/cloud/ai-agents/triage-resolution-agent.mdx
+++ b/docs/cloud/ai-agents/triage-resolution-agent.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Triage & Resolution AI Agent (Beta)"
+title: "Triage & Resolution AI Agent"
 sidebarTitle: "Triage & resolution agent"
 icon: "toolbox"
 ---
@@ -64,7 +64,7 @@ Once the problem is identified, the agent can:
 
 - Recommend **concrete steps to fix** the issue.
 - Automatically **open a pull request** with proposed changes.
-- (Coming soon) **Notify stakeholders** affected by the issue.
+- **Notify stakeholders** affected by the issue.
 
 ## Who It’s For
 
