Update Hex logo and favicon

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -631,7 +631,7 @@ export const integrations = [{
   link: "https://tally.so/r/3N6DlW?integration=Hightouch",
   comingSoon: true,
 }, {
-  image: `${cloudinaryIntegrationsBase}/Hex_ylmow7.png`,
+  image: "https://res.cloudinary.com/do5hrgokq/image/upload/v1764678628/1718232346589_fw6ckf.jpg",
   label: "Hex",
   cloud: true,
   oss: false,
