Increase Hex logo size to match other integration logos

--- a/docs/snippets/cloud/integrations/cards-groups/bi-cards.mdx
+++ b/docs/snippets/cloud/integrations/cards-groups/bi-cards.mdx
@@ -117,7 +117,7 @@
     <img 
       src="https://res.cloudinary.com/do5hrgokq/image/upload/v1764678628/1718232346589_fw6ckf.jpg"
       alt="Hex"
-      style={{ width: "34px", height: "36px", objectFit: "contain" }}
+      style={{ width: "40px", height: "40px", objectFit: "contain", display: "block" }}
     />
   }
 />
