Add email alerts documentation for cloud
- Add email.mdx documentation page
- Add Email card to alerts destination cards
- Add email to docs.json navigation

--- a/docs/snippets/cloud/integrations/cards-groups/alerts-destination-cards.mdx
+++ b/docs/snippets/cloud/integrations/cards-groups/alerts-destination-cards.mdx
@@ -67,6 +67,13 @@
   >
   </Card>
   <Card
+    title="Email"
+    href="/cloud/integrations/alerts/email"
+    icon="envelope"
+    iconType="solid"
+  >
+  </Card>
+  <Card
     title="Jira"
     href="/cloud/integrations/alerts/jira"
     icon={
