Add exclude_detection_period_from_training parameter documentation
- Add new documentation page for exclude_detection_period_from_training parameter
- Add parameter to anomaly-params overview page
- Add references in detection-period and training-period docs
- Add to docs.json navigation

--- a/docs/data-tests/anomaly-detection-configuration/anomaly-params.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/anomaly-params.mdx
@@ -34,6 +34,7 @@ import AiGenerateTest from '/snippets/ai-generate-test.mdx';
    -- <a href="/data-tests/anomaly-detection-configuration/detection-period"><font color="#CD7D55">detection_period: int</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/detection-period"><font color="#CD7D55">period: [hour | day | week | month]</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/detection-period"><font color="#CD7D55">count: int</font></a>
+   -- <a href="/data-tests/anomaly-detection-configuration/exclude_detection_period_from_training"><font color="#CD7D55">exclude_detection_period_from_training: [true | false]</font></a>
    -- <a href="/data-tests/anomaly-detection-configuration/time-bucket"><font color="#CD7D55">time_bucket:</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/time-bucket"><font color="#CD7D55">period: [hour | day | week | month]</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/time-bucket"><font color="#CD7D55">count: int</font></a>
