--- a/docs/cloud/features/collaboration-and-communication/logs.mdx
+++ b/docs/cloud/features/collaboration-and-communication/logs.mdx
@@ -1,6 +1,6 @@
 ---
 title: Elementary Audit Logs
-sidebarTitle: Logs
+sidebarTitle: Audit Logs
 ---
 
 The **Logs** feature allows workspace admins to track and export both user actions and system-level events across the platform. This includes user configuration changes, data synchronization events, and alert deliveries.
