--- a/docs/cloud/features/roles-and-permissions.mdx
+++ b/docs/cloud/features/roles-and-permissions.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Roles & Permissions Management״
+title: "Roles & Permissions Management in Elementary"
 ---
 
 Roles & Permissions management in Elementary lets you control **who can see or do what** inside your account.
