--- a/docs/cloud/features/roles-and-permissions.mdx
+++ b/docs/cloud/features/roles-and-permissions.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Roles & Permissions Management in Elementary"
+title: "Roles & Permissions Management"
 ---
 
 Roles & Permissions management in Elementary lets you control **who can see or do what** inside your account.
@@ -14,11 +14,12 @@ Instead of everyone having the same access, you can assign **roles** to users or
 - **Flexibility** — permissions are configurable per account, environment, and even per asset/test grouping, so you can support complex org structures.
 
 ## How it works in Elementary
+
 | Level | What it controls | Typical use cases |
 | --- | --- | --- |
 | **Account-level permissions** | **Global account configurations** (e.g. manage users, setup integrations, export audit logs) | Admins, Security / Compliance officers |
-| **Environment-level permissions** | - Access to **specific environments** (e.g. Prod, Staging)
-- Access to **environment pages and features** (catalog, lineage, PRs, etc.) | Data teams, Analytics engineers, Data governance |
+| **Environment-level permissions** | Access to **specific environments** (e.g. Prod, Staging).
+Access to **environment pages and features** (catalog, lineage, PRs, etc.) | Data teams, Analytics engineers, Data governance |
 | **Resources - Asset/Test-level permissions** | Access to **specific group of assets or tests** (e.g. only Marketing datasets, or only domain specific DQ rules) | Scoped analysts / data stewards or domain-specific business users |
 
 A user's effective permissions are the sum (union) of all roles and permissions granted to them.
