--- a/docs/cloud/features/roles-and-permissions.mdx
+++ b/docs/cloud/features/roles-and-permissions.mdx
@@ -33,12 +33,12 @@ Roles in Elementary can be divided into two categories: built-in (Admin, editor,
 ### **Built-in Roles**
 
 Elementary includes default roles most teams can use immediately - Admin, Editor, Viewer:
-
-| Permissions Level/ Roles | Admin | Editor | Viewer |
+| Roles/ Permissions Level | **Account-level permissions** | **Environment-level permissions** | **Resources- Asset/Test-level permissions** |
 | --- | --- | --- | --- |
-| **Account-level permissions** | **Full (Can edit) access for account configurations** (e.g. manage users, setup integrations, export audit logs) | No permissions for account configurations | No permissions for account configurations |
-| **Environment-level permissions** | **Full (can edit) access for all environments, pages and features:** Can view and manage any configuration within the environments such as alert rules, manage incidents and PRs, etc. | **Full (can edit) access for all environments, pages and features:** Can view and manage any configuration within the environments such as alert rules, manage incidents and PRs, etc. | **Read only access for all environments:** can view all environments and pages. can't make any changes through the UI. |
-| **Resources- Asset/Test-level permissions** | **Full (can edit) access to all assets and tests:** can create/edit assets, run DQ (data-quality) rules, manage pipelines, etc **** | **Full (can edit) access to all assets and tests:** can create/edit assets, run DQ (data-quality) rules, manage pipelines, etc | **Read-only access across data assets and tests:** can browse data assets, lineage, assets' data health, etc. |
+| **Admin** | **Full (Can edit) access for account configurations** (e.g. manage users, setup integrations, export audit logs) | **Full (can edit) access for all environments, pages and features:** Can view and manage any configuration within the environments such as alert rules, manage incidents and PRs, etc. | **Full (can edit) access to all assets and tests:** can create/edit assets, run DQ (data-quality) rules, manage pipelines, etc |
+| **Editor** | No permissions for account configurations | **Full (can edit) access for all environments, pages and features:** Can view and manage any configuration within the environments such as alert rules, manage incidents and PRs, etc. | **Full (can edit) access to all assets and tests:** can create/edit assets, run DQ (data-quality) rules, manage pipelines, etc
+**** |
+| **Viewer** | No permissions for account configurations | **Read only access for all environments:** can view all environments and pages. can’t make any changes through the UI. | **Read-only access across data assets and tests:** can browse data assets, lineage, assets’ data health, etc. |
 
 These roles cover most organizations, but you can extend them with custom roles.
 
