--- a/docs/cloud/features/roles-and-permissions.mdx
+++ b/docs/cloud/features/roles-and-permissions.mdx
@@ -84,7 +84,7 @@ Each role may include permissions at one, two, or all three levels:
 
 ![image.png](https://res.cloudinary.com/do5hrgokq/image/upload/v1765210540/roles2_r1pbqj.png)
 
-## Getting started: How to set up role management
+## Getting started: How to set up roles
 
 1. **Plan your organizational structure**
     - List out personas in your org (e.g. "Data Engineer", "Analyst", "Marketing Analyst", "Business users", "DevOps")
