--- a/docs/cloud/features/roles-and-permissions.mdx
+++ b/docs/cloud/features/roles-and-permissions.mdx
@@ -18,8 +18,7 @@ Instead of everyone having the same access, you can assign **roles** to users or
 | Level | What it controls | Typical use cases |
 | --- | --- | --- |
 | **Account-level permissions** | **Global account configurations** (e.g. manage users, setup integrations, export audit logs) | Admins, Security / Compliance officers |
-| **Environment-level permissions** | Access to **specific environments** (e.g. Prod, Staging).
-Access to **environment pages and features** (catalog, lineage, PRs, etc.) | Data teams, Analytics engineers, Data governance |
+| **Environment-level permissions** | Access to **specific environments** (e.g. Prod, Staging) + Access to **environment pages and features** (catalog, lineage, PRs, etc.) | Data teams, Analytics engineers, Data governance |
 | **Resources - Asset/Test-level permissions** | Access to **specific group of assets or tests** (e.g. only Marketing datasets, or only domain specific DQ rules) | Scoped analysts / data stewards or domain-specific business users |
 
 A user's effective permissions are the sum (union) of all roles and permissions granted to them.
@@ -84,7 +83,7 @@ Each role may include permissions at one, two, or all three levels:
 
 ![image.png](https://res.cloudinary.com/do5hrgokq/image/upload/v1765210540/roles2_r1pbqj.png)
 
-## Getting started: How to set up roles
+## Getting started: How to set up roles and permissions
 
 1. **Plan your organizational structure**
     - List out personas in your org (e.g. "Data Engineer", "Analyst", "Marketing Analyst", "Business users", "DevOps")
